# polyUrobot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-asl-hf.txt  requirements-asl-lite.txt  requirements-handwriting.txt  requirements.txt
examples/: batch_extract.py  structured_json.py
scripts/: asl_image_hf.py  collect_asl_samples.py  handwriting_upload_app.py  predict_handwritten_letter.py  run_asl_hf_webcam.py  run_asl_realtime.py  train_asl_landmark_model.py
src/image_to_text_vlm/: __init__.py  asl_classifier.py  asl_hf.py  asl_landmarks.py  cli.py  handwriting_hf.py  vlm.py
tests/: test_asl_landmarks.py  test_handwriting.py  test_prompts.py
